updated AndroidManifest file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Bridge Talent</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Kuona Trust Foundation</string>
+    <string name="nav_header_title">Bridge Talent Management</string>
     <string name="nav_header_subtitle">Kuona Trust Foundation</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
